hotfix: fixes infinite scroller jumping bug
actually fixes the issue (final)

--- a/src/assets/css/softskillsScroller.css
+++ b/src/assets/css/softskillsScroller.css
@@ -1,6 +1,6 @@
 @keyframes infiniteScroll {
   to {
-    transform: translateX(calc(-50% - var(--softskills-scroller-gap)));
+    transform: translateX(-50%);
   }
 }
 
